@@ -1,0 +1,10 @@
+namespace TestSiteARSupport.Controllers
+{
+	using Castle.MonoRail.Framework;
+	using Model;
+
+	[Scaffolding(typeof(Customer))]
+	public class CustomerController : Controller
+	{
+	}
+}
